css/main.css
@import url("reset.css");

/*
  ========================================
  Grid
  ========================================
*/

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

/*
  ========================================
  Typography
  ========================================
*/

h1, h2, h3, h4, h5 {
  font-family: 'Merriweather', serif;
  font-weight: 300;  
  font-style: bold;
  margin-bottom: 20px;
}

h2 {
  font-size: 20px;
}

h3 {
  font-size: 18px;  
}

h4 {
  font-size: 16px;
}

h5 {
  font-size: 14px;
}

p {
  margin-bottom: 20px;
}

pre {
  margin-bottom: 20px; 
}

strong {
  font-family: 'Merriweather', serif;
  font-size: 17px;
  font-style: bold;
}

/*
  ========================================
  Layout
  ========================================
*/

.group:before,
.group:after {
  content: "";
  display: table;
}
.group:after {
  clear: both;
}
.group {
  clear: both;
  *zoom: 1;
}

a {
  text-decoration: none;
  font-weight: normal;
  color: #2c7bb5;
}

header {
  background-color: #86A346;
  width: 100%;
  height: 140px;
  float: left;  
}

h1.title {
  max-width: 720px;
  width: 100%; 
  margin-top: 60px;
  margin-left: 150px;
  text-align: center;
  color: #ffffff;
  font-family: 'Merriweather', serif;
  font-size: 50px;
}

.container {
  margin: 0 auto;
  max-width: 720px;
  width: 100%;
  padding: 80px 20px 20px 60px;
  background-color: #ffffff;
  font-family: 'Merriweather', serif;
  font-size: 14px;
  font-weight: 300;
}

.footinfo {
  margin-left: 150px;
  max-width: 720px;
  width: 100%;
  padding: 20px;
  text-align: center;
  background-color: #ffffff;
  font-family: 'Merriweather', serif;
  font-size: 14px;
  font-weight: 300;
}

#selected {
  color: black;
}

/*
  ========================================
  Top menu
  ========================================
*/

nav.topnav {
  width: 100%;
  height: 46px;
  background-color: #666666;
  font-size: 14px;
  font-family: 'Merriweather', serif;
  background: linear-gradient(to bottom, #8b8c90, #99999a);    
}

nav.topnav ul {
  display: inline-block;
  margin: 0;
  padding: 0;
}

nav.topnav ul.left {
  float: left;
}

nav.topnav ul.foundation {
  float: right;
}

nav.topnav ul li {
  display: inline-block;
  margin: 0;
  padding: 12px 10px 12px 10px;
  list-style: none;
}

nav.topnav ul li a {
  color: #C1C1C1;
}

/*
  ========================================
  Navigation menu
  ========================================
*/

img.logo {
  display: block;
  width: 92px;
  padding: 0px 0px 20px 0px;
}

nav.site {
  float: left;  
  width: 150px;
  padding: 40px 20px 20px 30px;
  line-height: 30px;
  font-family: 'Merriweather', serif;
}

ul.leftnav {
  margin-left: 10px;
  list-style: none;
}

/*
  ========================================
  Site Style
  ========================================
*/

small {
  font-size: 85%;
}

section {
  float: left;
  margin: 0 1.5%;
}

body {
  color: #888;
  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

code {
  font-family: monospace, "Courier New", Courier;
}

sup { 
  vertical-align: super;
  font-size: smaller;
}

b {
    font-weight: bold;
}

.body-image {
  max-width: 480px;  
  width: 100%;  
  display: block;
  margin-left: auto;
  margin-right: auto;  
}

.body-image-portrait {
  max-height: 480px;  
  display: block;
  margin-left: auto;
  margin-right: auto;  
}

.butterbar {
  font-size: 120%;
  line-height: 135%;
  padding: 1em;
  background: #DEFFBC;
  border: 1px solid #94C125;

  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  margin-bottom: 20px;
}

/*
  ========================================
  Lists
  ========================================
*/

ul {
  display: block;
  list-style: disc;
  padding-left: 12px;
}

ol {
  display: block;
  list-style: decimal;
  padding-left: 12px;  
}

/*
  ========================================
  Reference
  ========================================
*/

#Reference .curated-item p { padding-right: 14px; }

/*
  ========================================
  Tutorials
  ========================================
*/

#Tutorials .curated-item p { padding-right: 14px; }

/*
  ========================================
  Media queries
  ========================================
*/

@media screen and (max-width: 870px) {
  /* Config when the width of the screen is less than 860 */
  
  img.logo {
    float: left; 
    margin-right: 15px;
    margin-bottom: 0px;
    padding: 0px 0px 0px 0px;
  }

  nav.site {
    width: 100%;
    padding-left: 5%;
    padding-right: 5%;
  }  

  nav.site ul.leftnav {
    margin-top: 30px;
  }
  
  nav.site ul li {
    display: inline-block;
    padding-left: 5px; 
    padding-right: 5px; 
    list-style: none;
  }

  .container {
    width: 100%;
    padding-left: 10%;
    padding-right: 5%;
    padding-top: 20px;
  }
  
  h1.title {
    width: 100%;
    margin-left: 0px;
    padding-left: 10%;
    padding-right: 5%;
  }  
  
  .footinfo {
    width: 100%;
    padding-left: 10%;
    padding-right: 5%;
    margin-left: 0px;
  }     
}

@media screen and (max-width: 747px) {
  nav.site ul.leftnav {
    margin-top: 18px;
  }  
}

@media screen and (max-width: 672px) {
  h1.title {
    margin-top: 13px;
    line-height: 1.2;
  }  
}


@media screen and (max-width: 638px) {
  nav.topnav ul.foundation {
    float: left;
  }  
  nav.topnav {
    height: 92px;
  }  
}

@media screen and (max-width: 461px) {
  nav.site ul.leftnav {
    margin-top: 4px;
  }
  nav.topnav {
    height: 76px;
  }    
  nav.topnav ul li {
    padding: 8px 5px 8px 5px;
  }  
}

@media screen and (max-width: 421px) {
  nav.topnav {
    height: 114px;
  }    
}

@media screen and (max-width: 355px) {
  nav.site ul.leftnav {
    margin-top: -12px;
  }  
}

@media screen and (max-width: 350px) {
  h1.title {
    margin-top: 25px;
    font-size: 40px;
    line-height: 1.2;
  }  
}

@media screen and (max-width: 281px) {
  h1.title {
    margin-top: 18px;
    font-size: 30px;
    line-height: 1.2;
  }
}

@media screen and (max-width: 251px) {
  nav.topnav {
    display: none;
  }  
}

